src/elements/snapshots/panoramix__elements__optional_element__tests__either_widget-4.snap
---
source: src/elements/optional_element.rs
expression: root_state_5

---
RootWidget(
    Column(
        Label(
            "Goodbye",
        ),
    ),
)
