src/elements/snapshots/panoramix__elements__optional_element__tests__new_either-2.snap
---
source: src/elements/optional_element.rs
expression: either_elem_data

---
Left(
    LabelData {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
