src/elements/snapshots/panoramix__elements__optional_element__tests__new_either-3.snap
---
source: src/elements/optional_element.rs
expression: either_elem

---
Right(
    Button {
        text: "World",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
        reserved_widget_id: None,
    },
)
