src/elements/snapshots/panoramix__elements__optional_element__tests__new_either.snap
---
source: src/elements/optional_element.rs
expression: either_elem

---
Left(
    Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
