src/elements/snapshots/panoramix__elements__optional_element__tests__new_option.snap
---
source: src/elements/optional_element.rs
expression: option_label

---
Some(
    Label {
        text: "Hello",
        flex: FlexParams {
            flex: 1.0,
            alignment: None,
        },
    },
)
