src/elements/snapshots/panoramix__elements__optional_element__tests__option_widget-2.snap
---
source: src/elements/optional_element.rs
expression: root_state_2

---
RootWidget(
    Column(
        Label(
            "World",
        ),
    ),
)
