src/elements/snapshots/panoramix__elements__optional_element__tests__option_widget-3.snap
---
source: src/elements/optional_element.rs
expression: root_state_3

---
RootWidget(
    Column,
)
