src/elements/snapshots/panoramix__elements__optional_element__tests__option_widget-4.snap
---
source: src/elements/optional_element.rs
expression: root_state_4

---
RootWidget(
    Column(
        Label(
            "Goodbye",
        ),
    ),
)
