src/elements/snapshots/panoramix__elements__optional_element__tests__option_widget.snap
---
source: src/elements/optional_element.rs
expression: root_state

---
RootWidget(
    Column(
        Label(
            "Hello",
        ),
    ),
)
